                    1.3.1 Release Notes
                  ------------------------

This file contains a description of the major changes to ProFTPD for the
1.3.1 release cycle, from the 1.3.1rc1 release to the 1.3.1-stable release.
More information on these changes can be found in the NEWS and ChangeLog
files.

1.3.0rc1
---------
  + New configuration directives:

      TLSCryptoDevice

  + Enhanced configuration directives:

      CreateHome uid gid

      LogFormat %S

      TLSRequired auth, auth+data

  + New configure options:

      --enable-devel=stacktrace
        This configure option enables logging of the call stack trace
        whenever a SIGSEGV signal is received.  Very very useful for
        tracking down the cause of a segfault.
 
  + New modules:

      mod_quotatab_radius

  + New documentation:

      doc/howto/CreateHome.html

  + Deprecated configuration directives:

      SQLHomedirOnDemand

Last Updated: $Date: 2006-04-17 22:48:36 $