@@ -37,6 +37,9 @@ files.
 
   + Deprecated configuration directives:
 
+      HiddenStor
+        Use HiddenStores
+
       SQLHomedirOnDemand
 
-Last Updated: $Date: 2006-04-17 22:48:36 $
+Last Updated: $Date: 2006-04-19 23:10:36 $
